<resources>
    <string name="app_name">Wikipedia Race</string>
    <string name="welcome_st">Welcome!</string>
    <string name="single_player_game_st">Join a Single Player Game</string>
    <string name="multi_player_game_st">Join a Multi Player Game</string>
    <string name="stats_st">View User\'s Statistics</string>
    <string name="leaderboard_st">View Leaderboard</string>
    <string name="start_game_st">Start Game</string>
    <string name="destination_page_st">Destination Page:</string>
    <string name="return_main_st">Return to Main Page</string>
    <string name="links_clicked_st">Number of Links to Reach Destination:</string>
    <string name="paths_taken_st">Your Path Traversal: </string>
    <string name="placement_st">Position: </string>
    <string name="time_taken_st">Time to Destination: </string>
    <string name="number_of_seconds_st">Seconds:</string>
    <string name="loading_multi_player_st">Searching for Players...</string>
    <string name="loading_single_player_st">Finding Start and End Pages...</string>
    <string name="msg_token_fmt">%1$s</string>
    <string name="table_ranking_st">Ranking</string>
    <string name="table_name_st">Player Name</string>
    <string name="table_score_st">Score</string>
    <string name="table_top_10_name">Top 10 Players All-Time Leaderboard</string>
    <string name="player_1_ranking">1</string>
    <string name="player_2_ranking">2</string>
    <string name="player_3_ranking">3</string>
    <string name="player_4_ranking">4</string>
    <string name="player_5_ranking">5</string>
    <string name="player_6_ranking">6</string>
    <string name="player_7_ranking">7</string>
    <string name="player_8_ranking">8</string>
    <string name="player_9_ranking">9</string>
    <string name="player_10_ranking">10</string>
    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="player_3_name">Player 3</string>
    <string name="player_4_name">Player 4</string>
    <string name="player_5_name">Player 5</string>
    <string name="player_6_name">Player 6</string>
    <string name="player_7_name">Player 7</string>
    <string name="player_8_name">Player 8</string>
    <string name="player_9_name">Player 9</string>
    <string name="player_10_name">Player 10</string>
    <string name="player_1_score">100</string>
    <string name="player_2_score">90</string>
    <string name="player_3_score">80</string>
    <string name="player_4_score">70</string>
    <string name="player_5_score">60</string>
    <string name="player_6_score">50</string>
    <string name="player_7_score">40</string>
    <string name="player_8_score">30</string>
    <string name="player_9_score">20</string>
    <string name="player_10_score">10</string>
    <string name="games_won_st">Number of Games Won:</string>
    <string name="games_won_value_st">0</string>
    <string name="games_lost_st">Number of Games Lost:</string>
    <string name="games_lost_value_st">0</string>
    <string name="avg_traversal_length_st">Average Traversal Length:</string>
    <string name="avg_traversal_length_value_st">0</string>
    <string name="elo_st">Elo:</string>
    <string name="elo_value_st">0</string>
    <string name="daily_challenge_st">Daily Challenge</string>
    <string name="loading_daily_challenge_st">Finding Daily Pages:</string>
    <string name="friend_mode_st">Play Against a Friend</string>
    <string name="friend_mode_wait_st">Waiting for Friend and Finding Pages...</string>
    <string name="friend_mode_look_up_friend_by_id">Input Friend ID:</string>
    <string name="play_game_st">Play a Game</string>
    <string name="friend_id_instruct">Insert Friend ID to Add a Friend to the Friends List</string>
    <string name="player_id_st">Player ID</string>
    <string name="player_id_value_st">0</string>
    <string name="validate_friend_id_st">Add Friend</string>
    <string name="guest_signin_st">Sign in as a Guest</string>
    <string name="user_id_st">Your ID:</string>
    <string name="user_id_value_st">abc</string>
    <string name="shortest_path_text_st">Shortest Path Possible:</string>
    <string name="match_found_st">Match Found!</string>
    <string name="game_details_toast_st"></string>
    <string name="friends">Friends</string>
    <string name="friends_id">Friend ID</string>
    <string name="friends_name">Friend Name</string>
    <string name="selected_friend_st">Selected Friend:</string>
    <string name="click_friend_st">None</string>
    <string name="friend_game_st">Start Game</string>
    <string name="select_friend_instruction_st">Click on a Friend From the List Above to Start a Game</string>
    <string name="click_friend_id_st">0000000</string>
    <string name="quit_game_st">Quit Game</string>
</resources>