...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InGameActivity"
    tools:layout_editor_absoluteY="81dp">

    <WebView
        android:id="@+id/wikipedia_page_view"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
